--- a/public_src/less/app.less
+++ b/public_src/less/app.less
@@ -40,6 +40,9 @@ h2, h4 {
 .right {
 	text-align:right;
 }
+.right * {
+	text-align: left;
+}
 
 .center {
 	float: none; margin-left: auto; margin-right: auto; 
