--- a/public_src/partials/auctionView.jade
+++ b/public_src/partials/auctionView.jade
@@ -36,3 +36,7 @@ h2
     a.btn.btn-large(ng-href="#/auction")
       i.icon-arrow-up
       |  Return To Auctions
+    | &nbsp;
+    a.btn.btn-large(ng-href="#/campaign/edit/{{auction.id}}")
+      i.icon-arrow-right
+      |  Go to Campaign
